Fix alignment issues in landing page

--- a/components/landingScreen/landingScreen.module.css
+++ b/components/landingScreen/landingScreen.module.css
@@ -1,5 +1,5 @@
 .headerRow{
-    height: 55vh;
+    height: 60vh;
 }
 
 .datasetRow{
